--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary npm run test-node",
     "coverage-report": "nyc report",
     "prepare": "npm run build",
+    "prepack": "npm run build",
     "test": "npm run test-node",
     "rebuild": "npm run clear && npm run build",
     "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -r esm -t 30000 -A -R ${REPORTER:-spec} test/*.spec.js",
